--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -30,12 +30,12 @@ nav {
     justify-content: space-between;
     align-items: center;
 
-    .link {
-      padding: 0 2rem;
+    li {
+      list-style: none;
       text-decoration: none;
 
-      li {
-        list-style: none;
+      .link {
+        margin: 0 2rem;
         text-decoration: none;
       }
     }
@@ -63,4 +63,5 @@ nav {
 
 .link {
   text-decoration: none;
+  list-style: none;
 }
