--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,6 +24,48 @@ Link {
   font-size: 1.2rem;
 }
 
+.product-feed {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  border: 2px solid black;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  justify-self: center;
+  margin: 1rem 0;
+  border-radius: 1rem;
+}
+.product-card:hover {
+  cursor: pointer;
+}
+.product-card .card-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 220px;
+  background-color: #fff;
+  border-radius: 18px;
+}
+.product-card .card-img img {
+  max-width: 100%;
+  max-height: 120px;
+}
+.product-card .card-text {
+  padding: 1rem;
+}
+.product-card .card-text .product-title {
+  font-size: 1rem;
+}
+.product-card .card-text .product-price {
+  font-size: 0.9rem;
+  margin: 0.5rem 0;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
