add qty and buy button - no functionality

--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -1,5 +1,12 @@
+$white: #fff;
 $bg-color: #f2f9fc;
 $dark-grey: #414a4d;
+$peach-color: rgb(238, 195, 119);
+$peach-darker-color: rgb(237, 189, 108);
+
+$radius-sm: 5px;
+
+$btn-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
 
 Link {
   text-decoration: none;
