--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -17,10 +17,12 @@
     h1 {
       font-size: 2.6rem;
       text-transform: uppercase;
+      letter-spacing: 3px;
     }
 
     span {
       font-size: 1.2rem;
+      letter-spacing: 1px;
     }
   }
 }
