--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,27 +19,33 @@ Link {
 .splash-text h1 {
   font-size: 2.6rem;
   text-transform: uppercase;
+  letter-spacing: 3px;
 }
 .splash-text span {
   font-size: 1.2rem;
+  letter-spacing: 1px;
 }
 
 .product-feed {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(3, 1fr);
+  column-gap: 50px;
 }
 
 .product-card {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   justify-self: center;
   margin: 1rem 0;
   border-radius: 1rem;
 }
 .product-card:hover {
   cursor: pointer;
+}
+.product-card:hover .card-img img {
+  transform: scale(1.22);
 }
 .product-card .card-img {
   display: flex;
@@ -53,6 +59,7 @@ Link {
 .product-card .card-img img {
   max-width: 100%;
   max-height: 120px;
+  transition: transform 0.3s ease-in-out;
 }
 .product-card .card-text {
   padding: 1rem;
@@ -63,6 +70,60 @@ Link {
 .product-card .card-text .product-price {
   font-size: 0.9rem;
   margin: 0.5rem 0;
+}
+
+.shop-product-card {
+  position: relative;
+}
+.shop-product-card:hover .buttons {
+  display: flex;
+}
+.shop-product-card .buttons {
+  position: absolute;
+  top: 85%;
+  display: none;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+.shop-product-card .buttons .product-qty {
+  display: flex;
+  flex-direction: row;
+}
+.shop-product-card .buttons .product-qty .qty-btn {
+  width: 22px;
+  height: 2rem;
+  background-color: #fff;
+  text-align: center;
+  color: #edbd6c;
+  line-height: 2rem;
+}
+.shop-product-card .buttons .product-qty .qty-btn.left {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.shop-product-card .buttons .product-qty .qty-btn.right {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.shop-product-card .buttons .product-qty .qty-input {
+  border: none;
+  color: #edbd6c;
+  text-align: center;
+  width: 50px;
+  height: 2rem;
+}
+.shop-product-card .buttons .add-to-cart-btn {
+  background-color: #eec377;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
+  margin-left: 1rem;
+}
+.shop-product-card .buttons .add-to-cart-btn:hover {
+  cursor: pointer;
 }
 
 * {
@@ -90,18 +151,19 @@ nav .nav-links {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 30%;
 }
 nav .nav-links li {
   list-style: none;
   text-decoration: none;
 }
 nav .nav-links li .link {
-  margin: 0 2rem;
   text-decoration: none;
 }
 nav .cart-icon {
   position: relative;
   z-index: 10;
+  font-size: 1.1rem;
 }
 nav .cart-icon .circle {
   position: absolute;
@@ -123,7 +185,7 @@ nav .cart-icon .circle {
 
 .btn {
   width: fit-content;
-  background-color: #edc57f;
+  background-color: #eec377;
   color: #fff;
   border-radius: 5px;
   padding: 1rem 2rem;
@@ -137,6 +199,16 @@ nav .cart-icon .circle {
 .link {
   text-decoration: none;
   list-style: none;
+}
+
+.icon {
+  font-size: 1.3rem;
+}
+
+.credit {
+  position: absolute;
+  bottom: 2rem;
+  left: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
