update & clean product card component & style

--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -3,14 +3,15 @@
   width: 100%;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 50px;
+  row-gap: 2rem;
 }
 
 .product-card {
   display: flex;
+  position: relative;
   flex-direction: column;
   width: 100%;
   justify-self: center;
-  margin: 1rem 0;
   border-radius: 1rem;
 
   &:hover {
@@ -19,6 +20,12 @@
     .card-img {
       img {
         transform: scale(1.22);
+      }
+    }
+
+    .card-details {
+      .buttons {
+        display: flex;
       }
     }
   }
@@ -39,83 +46,75 @@
     }
   }
 
-  .card-text {
+  .card-details {
     padding: 1rem;
 
-    .product-title {
-      font-size: 1rem;
+    .product-attributes {
+      .product-title {
+        font-size: 1rem;
+      }
+      .product-price {
+        font-size: 0.9rem;
+        margin: 0.5rem 0;
+      }
     }
-    .product-price {
-      font-size: 0.9rem;
-      margin: 0.5rem 0;
-    }
-  }
-}
 
-.shop-product-card {
-  position: relative;
-  &:hover {
     .buttons {
-      display: flex;
-    }
-  }
-
-  .buttons {
-    position: absolute;
-    top: 85%;
-    right: 1rem;
-    display: none;
-    //display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-
-    .product-qty {
-      display: flex;
+      position: absolute;
+      top: 85%;
+      right: 1rem;
+      display: none;
       flex-direction: row;
-      .qty-btn {
-        width: 22px;
-        height: 2rem;
-        background-color: $white;
-        text-align: center;
-        color: $peach-darker-color;
-        line-height: 2rem;
+      justify-content: flex-end;
+      align-items: center;
+      width: 100%;
+
+      .product-qty {
+        display: flex;
+        flex-direction: row;
+        .qty-btn {
+          width: 22px;
+          height: 2rem;
+          background-color: $white;
+          text-align: center;
+          color: $peach-darker-color;
+          line-height: 2rem;
+
+          &:hover {
+            cursor: pointer;
+          }
+
+          &.left {
+            border-top-left-radius: $radius-sm;
+            border-bottom-left-radius: $radius-sm;
+          }
+
+          &.right {
+            border-top-right-radius: $radius-sm;
+            border-bottom-right-radius: $radius-sm;
+          }
+        }
+
+        .qty-input {
+          border: none;
+          color: $peach-darker-color;
+          text-align: center;
+          width: 50px;
+          height: 2rem;
+        }
+      }
+
+      .add-to-cart-btn {
+        background-color: $peach-color;
+        color: $white;
+        padding: 0.5rem 1rem;
+        border-radius: $radius-sm;
+        box-shadow: $btn-shadow;
+        margin-left: 1rem;
 
         &:hover {
           cursor: pointer;
         }
-
-        &.left {
-          border-top-left-radius: $radius-sm;
-          border-bottom-left-radius: $radius-sm;
-        }
-
-        &.right {
-          border-top-right-radius: $radius-sm;
-          border-bottom-right-radius: $radius-sm;
-        }
-      }
-
-      .qty-input {
-        border: none;
-        color: $peach-darker-color;
-        text-align: center;
-        width: 50px;
-        height: 2rem;
-      }
-    }
-
-    .add-to-cart-btn {
-      background-color: $peach-color;
-      color: $white;
-      padding: 0.5rem 1rem;
-      border-radius: $radius-sm;
-      box-shadow: $btn-shadow;
-      margin-left: 1rem;
-
-      &:hover {
-        cursor: pointer;
       }
     }
   }
