--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -49,7 +49,7 @@
   .card-details {
     padding: 1rem;
 
-    .product-attributes {
+    .product-card-attributes {
       .product-title {
         font-size: 1rem;
       }
