--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,13 +12,22 @@ body {
   background-color: $bg-color;
 }
 
-nav {
+.sticky-nav {
+  position: fixed;
+  z-index: 20;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 10vh;
+  background-color: $bg-color;
   padding: 0 5rem;
+  transition: top 0.5s ease-in-out;
+
+  &.hidden {
+    top: -10vh;
+  }
 
   .logo {
     .link {
@@ -65,6 +74,7 @@ nav {
 .page {
   width: 100%;
   padding: 0 5rem;
+  margin-top: 10vh;
 }
 
 .btn {
