--- a/src/css/style.css
+++ b/src/css/style.css
@@ -137,36 +137,44 @@ body {
   background-color: #f2f9fc;
 }
 
-nav {
+.sticky-nav {
+  position: fixed;
+  z-index: 20;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 10vh;
+  background-color: #f2f9fc;
   padding: 0 5rem;
+  transition: top 0.5s ease-in-out;
 }
-nav .logo .link {
+.sticky-nav.hidden {
+  top: -10vh;
+}
+.sticky-nav .logo .link {
   text-decoration: none;
 }
-nav .nav-links {
+.sticky-nav .nav-links {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 30%;
 }
-nav .nav-links li {
+.sticky-nav .nav-links li {
   list-style: none;
   text-decoration: none;
 }
-nav .nav-links li .link {
+.sticky-nav .nav-links li .link {
   text-decoration: none;
 }
-nav .cart-icon {
+.sticky-nav .cart-icon {
   position: relative;
   z-index: 10;
   font-size: 1.1rem;
 }
-nav .cart-icon .circle {
+.sticky-nav .cart-icon .circle {
   position: absolute;
   z-index: -1;
   top: -50%;
@@ -182,6 +190,7 @@ nav .cart-icon .circle {
 .page {
   width: 100%;
   padding: 0 5rem;
+  margin-top: 10vh;
 }
 
 .btn {
