add shadow to product cards on hover

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,9 @@ Link {
 .product-card:hover {
   cursor: pointer;
 }
+.product-card:hover .card-img {
+  box-shadow: 2px 6px 18px rgba(0, 0, 0, 0.057);
+}
 .product-card:hover .card-img img {
   transform: scale(1.22);
 }
@@ -59,6 +62,7 @@ Link {
   height: 220px;
   background-color: #fff;
   border-radius: 18px;
+  transition: box-shadow 0.5s;
 }
 .product-card .card-img img {
   max-width: 100%;
