--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -21,6 +21,7 @@
       img {
         transform: scale(1.22);
       }
+      box-shadow: 2px 6px 18px rgba(0, 0, 0, 0.057);
     }
 
     .card-details {
@@ -38,6 +39,7 @@
     height: 220px;
     background-color: #fff;
     border-radius: 18px;
+    transition: box-shadow 0.5s;
 
     img {
       max-width: 100%;
