--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -7,6 +7,7 @@ $peach-darker-color: rgb(237, 189, 108);
 $radius-sm: 5px;
 
 $btn-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
+$product-shadow: 0px 6px 48px rgba(0, 0, 0, 0.032);
 
 Link {
   text-decoration: none;
