--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -1,3 +1,8 @@
+.page-shop {
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 .categories {
   display: flex;
   flex-direction: row;
@@ -29,20 +34,53 @@
 }
 
 .product-feed {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 50px;
-  row-gap: 2rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: fit-content;
+}
+
+.arrow {
+  position: absolute;
+  z-index: 10;
+  top: 160px;
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 60px;
+  font-size: 1.4rem;
+  box-shadow: $btn-shadow;
+
+  transition: transform 0.3s;
+
+  &.arrow-left {
+    left: 0;
+  }
+
+  &.arrow-right {
+    left: 78vw;
+  }
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
 }
 
 .product-card {
+  position: relative;
   display: flex;
+  right: 0;
+  flex-direction: row;
   position: relative;
   flex-direction: column;
-  width: 100%;
+  width: 42vw;
   justify-self: center;
   border-radius: 0.5rem;
+  margin: 1rem 1rem 1rem 0;
 
   &:hover {
     cursor: pointer;
@@ -66,7 +104,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 220px;
+    height: 320px;
     background-color: #fff;
     border-radius: 18px;
     transition: box-shadow 0.5s;
@@ -80,6 +118,7 @@
 
   .card-details {
     padding: 0.5rem;
+    height: 120px;
 
     .product-card-attributes {
       .product-title {
