--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,11 @@ Link {
   letter-spacing: 1px;
 }
 
+.page-shop {
+  overflow-x: hidden;
+  width: 100vw;
+}
+
 .categories {
   display: flex;
   flex-direction: row;
@@ -54,20 +59,49 @@ Link {
 }
 
 .product-feed {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 50px;
-  row-gap: 2rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: fit-content;
+}
+
+.arrow {
+  position: absolute;
+  z-index: 10;
+  top: 160px;
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 60px;
+  font-size: 1.4rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
+  transition: transform 0.3s;
+}
+.arrow.arrow-left {
+  left: 0;
+}
+.arrow.arrow-right {
+  left: 78vw;
+}
+.arrow:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 .product-card {
+  position: relative;
   display: flex;
+  right: 0;
+  flex-direction: row;
   position: relative;
   flex-direction: column;
-  width: 100%;
+  width: 42vw;
   justify-self: center;
   border-radius: 0.5rem;
+  margin: 1rem 1rem 1rem 0;
 }
 .product-card:hover {
   cursor: pointer;
@@ -86,7 +120,7 @@ Link {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 220px;
+  height: 320px;
   background-color: #fff;
   border-radius: 18px;
   transition: box-shadow 0.5s;
@@ -98,6 +132,7 @@ Link {
 }
 .product-card .card-details {
   padding: 0.5rem;
+  height: 120px;
 }
 .product-card .card-details .product-card-attributes .product-title {
   font-size: 1rem;
