--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -57,11 +57,11 @@
   transition: transform 0.3s;
 
   &.arrow-left {
-    left: 0;
+    left: 0rem;
   }
 
   &.arrow-right {
-    left: 78vw;
+    left: calc(100vw - 14rem);
   }
 
   &:hover {
@@ -80,7 +80,7 @@
   width: 42vw;
   justify-self: center;
   border-radius: 0.5rem;
-  margin: 1rem 1rem 1rem 0;
+  margin: 1rem 2vw 1rem 0;
 
   &:hover {
     cursor: pointer;
