update page & nav padding to use vw units. update product card to use inline css for width

--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -18,7 +18,7 @@
     .category {
       list-style: none;
       background-color: rgb(255, 255, 255);
-      width: 160px;
+      width: 13vw;
       height: 120px;
       text-align: center;
       line-height: 120px;
