--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,7 +22,7 @@ body {
   width: 100%;
   height: 10vh;
   background-color: $bg-color;
-  padding: 0 5rem;
+  padding: 0 7vw;
   transition: top 0.5s ease-in-out;
 
   &.hidden {
@@ -73,7 +73,7 @@ body {
 
 .page {
   width: 100%;
-  padding: 0 5rem;
+  padding: 0 7vw;
   margin-top: 10vh;
 }
 
