--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,7 +46,7 @@ Link {
 .categories .categories-list .category {
   list-style: none;
   background-color: white;
-  width: 160px;
+  width: 13vw;
   height: 120px;
   text-align: center;
   line-height: 120px;
@@ -213,7 +213,7 @@ body {
   width: 100%;
   height: 10vh;
   background-color: #f2f9fc;
-  padding: 0 5rem;
+  padding: 0 7vw;
   transition: top 0.5s ease-in-out;
 }
 .sticky-nav.hidden {
@@ -255,7 +255,7 @@ body {
 
 .page {
   width: 100%;
-  padding: 0 5rem;
+  padding: 0 7vw;
   margin-top: 10vh;
 }
 
