install react-spring

--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -81,6 +81,7 @@
   justify-self: center;
   border-radius: 0.5rem;
   margin: 1rem 2vw 1rem 0;
+  transition: right 0.3s;
 
   &:hover {
     cursor: pointer;
