--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,6 +102,7 @@ Link {
   justify-self: center;
   border-radius: 0.5rem;
   margin: 1rem 2vw 1rem 0;
+  transition: right 0.3s;
 }
 .product-card:hover {
   cursor: pointer;
