add smooth animations to product slider

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,6 +194,12 @@ Link {
   cursor: pointer;
 }
 
+.test {
+  position: absolute;
+  left: 0;
+  color: red;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
