--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -54,7 +54,7 @@
   font-size: 1.4rem;
   box-shadow: $btn-shadow;
 
-  transition: transform 0.3s;
+  //transition: transform 0.3s;
 
   &.arrow-left {
     left: 0rem;
