--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -1,6 +1,14 @@
 .page-shop {
   overflow-x: hidden;
   width: 100vw;
+
+  header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 120px;
+    text-align: center;
+  }
 }
 
 .categories {
