update bg color

--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -1,5 +1,5 @@
 $white: #fff;
-$bg-color: #f2f9fc;
+$bg-color: #f5f5f5;
 $dark-grey: #414a4d;
 $peach-color: rgb(238, 195, 119);
 $peach-darker-color: rgb(237, 189, 108);
