--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,7 +21,7 @@ body {
   align-items: center;
   width: 100%;
   height: 10vh;
-  background-color: $bg-color;
+  background-color: $white;
   padding: 0 7vw;
   transition: top 0.5s ease-in-out;
 
