--- a/src/css/style.css
+++ b/src/css/style.css
@@ -215,7 +215,7 @@ Link {
 }
 
 body {
-  background-color: #f2f9fc;
+  background-color: #f5f5f5;
 }
 
 .sticky-nav {
@@ -227,7 +227,7 @@ body {
   align-items: center;
   width: 100%;
   height: 10vh;
-  background-color: #f2f9fc;
+  background-color: #fff;
   padding: 0 7vw;
   transition: top 0.5s ease-in-out;
 }
