--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -1,6 +1,8 @@
 $white: #fff;
-$bg-color: #f5f5f5;
+$black: #292217;
+$bg-color: #fafafa;
 $dark-grey: #414a4d;
+$darker-grey: #373d3f;
 $peach-color: rgb(238, 195, 119);
 $peach-darker-color: rgb(237, 189, 108);
 
