--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -7,12 +7,18 @@
 
   &-text {
     position: relative;
-    top: -15vh;
+    top: -5vh;
+    left: 7vw;
     display: flex;
     flex-direction: column;
     width: 46%;
     height: 200px;
-    //border: red 2px solid;
+    color: $bg-color;
+
+    h1,
+    span {
+      text-shadow: 2px 2px 8px $darker-grey;
+    }
 
     h1 {
       font-size: 2.6rem;
@@ -24,5 +30,17 @@
       font-size: 1.2rem;
       letter-spacing: 1px;
     }
+  }
+
+  &-img {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url('/src/img/flower-close.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: right;
   }
 }
