--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,11 +10,17 @@ Link {
 }
 .splash-text {
   position: relative;
-  top: -15vh;
+  top: -5vh;
+  left: 7vw;
   display: flex;
   flex-direction: column;
   width: 46%;
   height: 200px;
+  color: #fafafa;
+}
+.splash-text h1,
+.splash-text span {
+  text-shadow: 2px 2px 8px #373d3f;
 }
 .splash-text h1 {
   font-size: 2.6rem;
@@ -25,16 +31,29 @@ Link {
   font-size: 1.2rem;
   letter-spacing: 1px;
 }
+.splash-img {
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url("/src/img/flower-close.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: right;
+}
 
 .page-shop {
   overflow-x: hidden;
   width: 100vw;
+  padding: 0 5rem;
 }
 .page-shop header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 120px;
+  height: 8rem;
+  background-color: #fafafa;
   text-align: center;
 }
 
@@ -43,6 +62,7 @@ Link {
   flex-direction: row;
   width: 100%;
   margin: 1rem 0 5rem;
+  padding: 2rem 0;
 }
 .categories .categories-list {
   display: flex;
@@ -67,27 +87,28 @@ Link {
   box-shadow: 0px 6px 48px rgba(0, 0, 0, 0.032);
 }
 
-.product-slider {
+.slider-container {
+  margin: 15vh 0;
+}
+.slider-container .product-slider {
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   width: fit-content;
 }
-
-.slider-title {
+.slider-container .slider-title {
   display: flex;
   flex-direction: row;
   align-items: baseline;
 }
-.slider-title h2 {
+.slider-container .slider-title h2 {
   font-size: 2rem;
 }
-.slider-title .slider-item-count {
+.slider-container .slider-title .slider-item-count {
   margin-left: 0.5rem;
 }
-
-.arrow {
+.slider-container .arrow {
   position: absolute;
   z-index: 10;
   top: 160px;
@@ -100,13 +121,13 @@ Link {
   font-size: 1.4rem;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
 }
-.arrow.arrow-left {
+.slider-container .arrow.arrow-left {
   left: 0rem;
 }
-.arrow.arrow-right {
+.slider-container .arrow.arrow-right {
   left: calc(100vw - 14rem);
 }
-.arrow:hover {
+.slider-container .arrow:hover {
   cursor: pointer;
   transform: scale(1.1);
 }
@@ -220,6 +241,18 @@ Link {
   color: red;
 }
 
+.page-cart {
+  overflow-x: hidden;
+  width: 100vw;
+}
+.page-cart header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  text-align: center;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -227,7 +260,8 @@ Link {
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: #fafafa;
+  color: #292217;
 }
 
 .sticky-nav {
@@ -246,9 +280,6 @@ body {
 .sticky-nav.hidden {
   top: -10vh;
 }
-.sticky-nav .logo .link {
-  text-decoration: none;
-}
 .sticky-nav .nav-links {
   display: flex;
   justify-content: space-between;
@@ -259,8 +290,12 @@ body {
   list-style: none;
   text-decoration: none;
 }
-.sticky-nav .nav-links li .link {
-  text-decoration: none;
+.sticky-nav .link {
+  color: #292217;
+  letter-spacing: 2px;
+}
+.sticky-nav .link:hover {
+  cursor: pointer;
 }
 .sticky-nav .cart-icon {
   position: relative;
@@ -282,7 +317,6 @@ body {
 
 .page {
   width: 100%;
-  padding: 0 7vw;
   margin-top: 10vh;
 }
 
@@ -294,6 +328,7 @@ body {
   padding: 1rem 2rem;
   margin: 0.75rem 0;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
+  letter-spacing: 2px;
 }
 .btn:hover {
   cursor: pointer;
@@ -306,12 +341,6 @@ body {
 
 .icon {
   font-size: 1.3rem;
-}
-
-.credit {
-  position: absolute;
-  bottom: 2rem;
-  left: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
