--- a/src/css/_config.scss
+++ b/src/css/_config.scss
@@ -1,6 +1,7 @@
 $white: #fff;
-$black: #292217;
-$bg-color: #fafafa;
+$black: #393022;
+$bg-color: #b0d4df;
+$bg-color-old: #fafafa;
 $dark-grey: #414a4d;
 $darker-grey: #373d3f;
 $peach-color: rgb(238, 195, 119);
