--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -1,6 +1,5 @@
 .splash {
   display: flex;
-  //justify-content: center;
   align-items: center;
   width: 100%;
   height: 90vh;
@@ -13,22 +12,23 @@
     flex-direction: column;
     width: 46%;
     height: 200px;
-    color: $bg-color;
+    color: darken($color: $bg-color, $amount: 5);
 
     h1,
     span {
-      text-shadow: 2px 2px 8px $darker-grey;
+      text-shadow: 2px 2px 6px $darker-grey;
     }
 
     h1 {
-      font-size: 2.6rem;
+      font-size: 3.2rem;
       text-transform: uppercase;
       letter-spacing: 3px;
     }
 
     span {
-      font-size: 1.2rem;
+      font-size: 1.6rem;
       letter-spacing: 1px;
+      margin-bottom: 1rem;
     }
   }
 
