--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -8,7 +8,6 @@
     justify-content: center;
     align-items: center;
     height: 8rem;
-    background-color: $bg-color;
     text-align: center;
   }
 }
@@ -34,13 +33,15 @@
       background-color: rgb(255, 255, 255);
       width: 13vw;
       height: 120px;
+      padding: 0.5rem;
       text-align: center;
       border-radius: $radius-sm;
-      transition: box-shadow 0.4s;
+      border: 1px solid $black;
+      transition: color 0.4s;
 
       &:hover {
         cursor: pointer;
-        box-shadow: $product-shadow;
+        color: $peach-darker-color;
       }
     }
   }
@@ -84,7 +85,7 @@
     font-size: 1.4rem;
     box-shadow: $btn-shadow;
 
-    //transition: transform 0.3s;
+    transition: transform 0.3s;
 
     &.arrow-left {
       left: 0rem;
@@ -108,20 +109,21 @@
   flex-direction: row;
   position: relative;
   flex-direction: column;
-  width: 42vw;
+  //width: 42vw;
   justify-self: center;
   border-radius: 0.5rem;
-  margin: 1rem 2vw 1rem 0;
+  margin: 1rem 6vw 1rem 0;
   transition: right 0.3s;
 
   &:hover {
     cursor: pointer;
 
     .card-img {
+      box-shadow: $product-shadow;
+      border: 1px solid $black;
       img {
         transform: scale(1.22);
       }
-      box-shadow: $product-shadow;
     }
 
     .card-details {
@@ -136,13 +138,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 320px;
+    height: 380px;
     background-color: #fff;
     border-radius: 18px;
     transition: box-shadow 0.5s;
 
     img {
-      max-width: 100%;
+      max-width: 72%;
       max-height: 180px;
       transition: transform 0.3s ease-in-out;
     }
