--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: lighten($color: $bg-color, $amount: 10);
+  background-color: $bg-color;
   color: $black;
   letter-spacing: 2px;
 }
@@ -27,6 +27,7 @@ body {
   background-color: $white;
   padding: 0 7vw;
   transition: top 0.5s ease-in-out;
+  box-shadow: 2px 0px 8px #0000001b;
 
   &.hidden {
     top: -10vh;
