--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,13 @@ Link {
   text-decoration: none;
 }
 
+.page-home {
+  position: relative;
+}
+
 .splash {
+  position: relative;
+  top: -5vh;
   display: flex;
   align-items: center;
   width: 100%;
@@ -56,21 +62,20 @@ Link {
   height: 8rem;
   text-align: center;
 }
-
-.categories {
+.page-shop .categories {
   display: flex;
   flex-direction: row;
   width: 100%;
   margin: 1rem 0 5rem;
   padding: 2rem 0;
 }
-.categories .categories-list {
+.page-shop .categories .categories-list {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
 }
-.categories .categories-list .category {
+.page-shop .categories .categories-list .category {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,11 +87,113 @@ Link {
   text-align: center;
   border-radius: 5px;
   border: 1px solid #393022;
-  transition: color 0.4s;
+  transition: color 0.4s, border 0.4s;
 }
-.categories .categories-list .category:hover {
+.page-shop .categories .categories-list .category:hover {
   cursor: pointer;
   color: #edbd6c;
+}
+.page-shop .product-card {
+  position: relative;
+  display: flex;
+  right: 0;
+  flex-direction: row;
+  position: relative;
+  flex-direction: column;
+  justify-self: center;
+  border-radius: 0.5rem;
+  margin: 1rem 6vw 1rem 0;
+  transition: right 0.3s;
+}
+.page-shop .product-card:hover {
+  cursor: pointer;
+}
+.page-shop .product-card:hover .card-img {
+  box-shadow: 0px 6px 48px rgba(0, 0, 0, 0.032);
+  border: 1px solid #393022;
+}
+.page-shop .product-card:hover .card-img img {
+  transform: scale(1.22);
+}
+.page-shop .product-card:hover .card-details .buttons {
+  display: flex;
+}
+.page-shop .product-card .card-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 380px;
+  background-color: #fff;
+  border-radius: 18px;
+  transition: box-shadow 0.5s;
+}
+.page-shop .product-card .card-img img {
+  max-width: 72%;
+  max-height: 180px;
+  transition: transform 0.3s ease-in-out;
+}
+.page-shop .product-card .card-details {
+  padding: 0.5rem;
+  height: 120px;
+}
+.page-shop .product-card .card-details .product-card-attributes .product-title {
+  font-size: 1rem;
+}
+.page-shop .product-card .card-details .product-card-attributes .product-price {
+  font-size: 0.9rem;
+  margin: 0.5rem 0;
+}
+.page-shop .product-card .card-details .buttons {
+  position: absolute;
+  top: 85%;
+  right: 1rem;
+  display: none;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+}
+.page-shop .product-card .card-details .buttons .product-qty {
+  display: flex;
+  flex-direction: row;
+}
+.page-shop .product-card .card-details .buttons .product-qty .qty-btn {
+  width: 22px;
+  height: 2rem;
+  background-color: #fff;
+  text-align: center;
+  color: #edbd6c;
+  line-height: 2rem;
+}
+.page-shop .product-card .card-details .buttons .product-qty .qty-btn:hover {
+  cursor: pointer;
+}
+.page-shop .product-card .card-details .buttons .product-qty .qty-btn.left {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.page-shop .product-card .card-details .buttons .product-qty .qty-btn.right {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.page-shop .product-card .card-details .buttons .product-qty .qty-input {
+  border: none;
+  color: #edbd6c;
+  text-align: center;
+  width: 50px;
+  height: 2rem;
+}
+.page-shop .product-card .card-details .buttons .add-to-cart-btn {
+  background-color: #eec377;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
+  margin-left: 1rem;
+}
+.page-shop .product-card .card-details .buttons .add-to-cart-btn:hover {
+  cursor: pointer;
 }
 
 .slider-container {
@@ -135,109 +242,6 @@ Link {
   transform: scale(1.1);
 }
 
-.product-card {
-  position: relative;
-  display: flex;
-  right: 0;
-  flex-direction: row;
-  position: relative;
-  flex-direction: column;
-  justify-self: center;
-  border-radius: 0.5rem;
-  margin: 1rem 6vw 1rem 0;
-  transition: right 0.3s;
-}
-.product-card:hover {
-  cursor: pointer;
-}
-.product-card:hover .card-img {
-  box-shadow: 0px 6px 48px rgba(0, 0, 0, 0.032);
-  border: 1px solid #393022;
-}
-.product-card:hover .card-img img {
-  transform: scale(1.22);
-}
-.product-card:hover .card-details .buttons {
-  display: flex;
-}
-.product-card .card-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 380px;
-  background-color: #fff;
-  border-radius: 18px;
-  transition: box-shadow 0.5s;
-}
-.product-card .card-img img {
-  max-width: 72%;
-  max-height: 180px;
-  transition: transform 0.3s ease-in-out;
-}
-.product-card .card-details {
-  padding: 0.5rem;
-  height: 120px;
-}
-.product-card .card-details .product-card-attributes .product-title {
-  font-size: 1rem;
-}
-.product-card .card-details .product-card-attributes .product-price {
-  font-size: 0.9rem;
-  margin: 0.5rem 0;
-}
-.product-card .card-details .buttons {
-  position: absolute;
-  top: 85%;
-  right: 1rem;
-  display: none;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100%;
-}
-.product-card .card-details .buttons .product-qty {
-  display: flex;
-  flex-direction: row;
-}
-.product-card .card-details .buttons .product-qty .qty-btn {
-  width: 22px;
-  height: 2rem;
-  background-color: #fff;
-  text-align: center;
-  color: #edbd6c;
-  line-height: 2rem;
-}
-.product-card .card-details .buttons .product-qty .qty-btn:hover {
-  cursor: pointer;
-}
-.product-card .card-details .buttons .product-qty .qty-btn.left {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-.product-card .card-details .buttons .product-qty .qty-btn.right {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-.product-card .card-details .buttons .product-qty .qty-input {
-  border: none;
-  color: #edbd6c;
-  text-align: center;
-  width: 50px;
-  height: 2rem;
-}
-.product-card .card-details .buttons .add-to-cart-btn {
-  background-color: #eec377;
-  color: #fff;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.084);
-  margin-left: 1rem;
-}
-.product-card .card-details .buttons .add-to-cart-btn:hover {
-  cursor: pointer;
-}
-
 .test {
   position: absolute;
   left: 0;
@@ -255,6 +259,30 @@ Link {
   height: 120px;
   text-align: center;
 }
+.page-cart main {
+  padding-left: 7vw;
+  display: flex;
+  flex-direction: row;
+}
+.page-cart main .cart-contentse {
+  width: 74%;
+}
+.page-cart main .cart-contentse .product-card {
+  flex-direction: row;
+}
+.page-cart main .cart-contentse .product-card .card-img {
+  width: 260px;
+}
+.page-cart main .cart-contentse .product-card .card-img img {
+  height: 100px;
+  width: 100px;
+}
+.page-cart main .cart-contentse .product-card:hover .card-img img {
+  transform: scale(1);
+}
+.page-cart main .cart-summary {
+  width: 46%;
+}
 
 * {
   box-sizing: border-box;
@@ -263,7 +291,7 @@ Link {
 }
 
 body {
-  background-color: #d4e8ee;
+  background-color: #fff;
   color: #393022;
   letter-spacing: 2px;
 }
@@ -280,6 +308,7 @@ body {
   background-color: #fff;
   padding: 0 7vw;
   transition: top 0.5s ease-in-out;
+  box-shadow: 2px 0px 8px #0000001b;
 }
 .sticky-nav.hidden {
   top: -10vh;
