--- a/src/css/_shop.scss
+++ b/src/css/_shop.scss
@@ -1,7 +1,7 @@
 .page-shop {
   overflow-x: hidden;
   width: 100vw;
-  padding: 0 5rem;
+  padding: 0 7vw;
 
   header {
     display: flex;
@@ -30,8 +30,8 @@
         align-items: center;
         list-style: none;
         background-color: rgb(255, 255, 255);
-        width: 13vw;
-        height: 120px;
+        width: 10vw;
+        height: 80px;
         padding: 0.5rem;
         text-align: center;
         border-radius: $radius-sm;
@@ -43,6 +43,18 @@
           color: $peach-darker-color;
         }
       }
+
+      @media (max-width: $tablet) {
+        .category {
+          width: 15vw;
+        }
+      }
+    }
+  }
+
+  @media (max-width: $mobile) {
+    .categories {
+      display: none;
     }
   }
 
@@ -221,6 +233,14 @@
     &:hover {
       cursor: pointer;
       transform: scale(1.1);
+    }
+  }
+
+  @media (max-width: $mobile) {
+    .arrow {
+      &.arrow-right {
+        left: calc(100vw - 7vw);
+      }
     }
   }
 }
