--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@ Link {
 .page-shop {
   overflow-x: hidden;
   width: 100vw;
-  padding: 0 5rem;
+  padding: 0 7vw;
 }
 .page-shop header {
   display: flex;
@@ -81,8 +81,8 @@ Link {
   align-items: center;
   list-style: none;
   background-color: white;
-  width: 13vw;
-  height: 120px;
+  width: 10vw;
+  height: 80px;
   padding: 0.5rem;
   text-align: center;
   border-radius: 5px;
@@ -92,6 +92,16 @@ Link {
 .page-shop .categories .categories-list .category:hover {
   cursor: pointer;
   color: #edbd6c;
+}
+@media (max-width: 768px) {
+  .page-shop .categories .categories-list .category {
+    width: 15vw;
+  }
+}
+@media (max-width: 425px) {
+  .page-shop .categories {
+    display: none;
+  }
 }
 .page-shop .product-card {
   position: relative;
@@ -240,6 +250,11 @@ Link {
 .slider-container .arrow:hover {
   cursor: pointer;
   transform: scale(1.1);
+}
+@media (max-width: 425px) {
+  .slider-container .arrow.arrow-right {
+    left: calc(100vw - 7vw);
+  }
 }
 
 .test {
