--- a/src/css/style.css
+++ b/src/css/style.css
@@ -283,14 +283,19 @@ Link {
   width: 74%;
 }
 .page-cart main .cart-contentse .product-card {
+  display: flex;
   flex-direction: row;
+  width: 100%;
+  height: 120px;
+  margin-bottom: 4rem;
 }
 .page-cart main .cart-contentse .product-card .card-img {
-  width: 260px;
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
 }
 .page-cart main .cart-contentse .product-card .card-img img {
-  height: 100px;
-  width: 100px;
+  width: 80px;
 }
 .page-cart main .cart-contentse .product-card:hover .card-img img {
   transform: scale(1);
